tests-system/rbt-valid-access-prefixes/output
t.first + t.second + t.third !=0, error "sum of tuple elements must not be 0", t
                       ^^^^^ rbt-valid-access-prefixes/foo.rsl:21: error: unknown symbol third
e = E.D
      ^ rbt-valid-access-prefixes/foo.trlc:4: error: unknown symbol D
Processed 1 model, 0 checks and 1 requirement file and found 2 errors
